<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ThirdFragment"
    android:background="@drawable/gradient_tip3"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/imageView1"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_fileName="17686-wash-your-hands-regularly.json"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title3"
        android:fontFamily="@font/holtwood_one_sc"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:textColor="#FFF"
        android:gravity="center"/>

    <TextView
        android:layout_marginTop="20dp"
        android:paddingTop="50dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:text="@string/description3"
        android:textSize="25sp"
        android:textColor="#FFF"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/slideThreeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/back"
            android:gravity="start|end"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:textSize="30sp"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/slideThreeNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/next"
            android:gravity="bottom|end"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:textSize="30sp"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>


</LinearLayout>