<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FirstFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient_tip4">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="250dp"
        android:background="#ffffff"
        android:layout_height="250dp"
        android:id="@+id/imageView4"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_fileName="20429-stay-home-stay-safe.json"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/title4"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:textColor="#FFF"
        android:gravity="center"/>

    <TextView
        android:layout_marginTop="20dp"
        android:paddingTop="50dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:text="@string/description4"
        android:textSize="25sp"
        android:textColor="#FFF"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/slideFourthBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/back"
            android:gravity="start|end"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:textSize="30sp"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/slideFourthNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/next"
            android:gravity="bottom|end"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:textSize="30sp"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>



</LinearLayout>