<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FirstFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient_tip1">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/imageView1"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_fileName="21542-social-distancing-imperial.json"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/holtwood_one_sc"
        android:gravity="center"
        android:text="@string/title1"
        android:textColor="#FFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginTop="20dp"
        android:paddingTop="50dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:text="@string/description1"
        android:textSize="25sp"
        android:textColor="#FFF"
        android:gravity="center"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/slideOneNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/next"
            android:gravity="bottom|end"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:textSize="30sp"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>



</LinearLayout>